# tiktokuploader

./: .env.example  .gitignore  LICENSE  README.md  index.html  privacy.html  privacy_policy.txt  pyproject.toml  requirements.txt  run_gui.py  terms.html  terms_of_service.txt  tiktokEwDn3n8mtN8PfGHhTFIr8MaUyvH8Ay5v.txt  tiktok_publish.py  tiktokv2BSSz4ui9B3LF5mKO2EZIGFQSguw4Pa.txt  tiktokzBj7HTJmMrkSvrWEMaFxGfuqh6XU2cf0.txt
.github/workflows/: test.yml
docs/: APP_REVIEW_TEXT.txt  DEMO.md
scripts/: publish_repository.sh  run_due.sh
src/tiktok_desktop_publisher/: __init__.py  api.py  auth.py  cli.py  config.py  gui.py  queue.py  service.py
tests/: test_core.py
